--- a/pom.xml
+++ b/pom.xml
@@ -129,7 +129,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 			<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-surefire-plugin</artifactId>
-				</plugin> -->
+				</plugin>-->
 			<plugin>
 				<groupId>org.eluder.coveralls</groupId>
 				<artifactId>coveralls-maven-plugin</artifactId>
@@ -203,6 +203,7 @@
 						</goals>
 					</execution>
 					<execution>
+					<id>report</id>
 						<phase>prepare-package</phase>
 						<goals>
 							<goal>report</goal>
