--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ deploy:
   provider: script
   script: 
   - "cp .travis.settings.xml $HOME/.m2/settings.xml "
-  - "mvn deploy "
+  - "mvn clean site deploy"
   - "HEROKU_API_KEY=$HEROKU_API_KEY mvn clean install -Pheroku"
   skip_cleanup: true
   on:
