--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,7 @@
 		<java.version>1.8</java.version>
 		<github.global.server>github</github.global.server>
 		<github.global.oauth2Token>${env.GITHUBOAUTH2TOKEN}</github.global.oauth2Token>
+		<full-artifact-name>target/${project.artifactId}-${project.version}.jar</full-artifact-name>
 	</properties>
 
 	<dependencies>
@@ -266,13 +267,14 @@
 						<version>2.0.2</version>
 						<configuration>
 							<appName>ng5-sb-crud-1</appName>
+
 							<includeTarget>false</includeTarget>
 							<includes>
 								<include>${basedir}/${full-artifact-name}</include>
 							</includes>
 							<jdkVersion>1.8</jdkVersion>
 							<processTypes>
-								<web>java $JAVA_OPTS -jar ${full-artifact-name}</web>
+								<web>java $JAVA_OPTS -jar ${full-artifact-name} --spring.profiles.active=heroku</web>
 							</processTypes>
 						</configuration>
 						<executions>
