--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,6 @@ spring.jpa.hibernate.ddl-auto = create-drop
 spring.jpa.properties.hibernate.show_sql=false
 spring.jpa.properties.hibernate.use_sql_comments=false
 spring.jpa.properties.hibernate.format_sql=false
+
+
+server.port=${PORT:8080}
